Revert "fix: long picker options truncated in quiet mode (#5813)"
This reverts commit c11afb257a8bc409ed23272a167372005adf4bcc.

--- a/packages/@adobe/spectrum-css-temp/components/dropdown/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/dropdown/index.css
@@ -159,16 +159,14 @@ governing permissions and limitations under the License.
 .spectrum-Field.spectrum-Dropdown-fieldWrapper--quiet {
   display: inline-flex;
   flex-direction: column;
-  inline-size: 100%;
-  max-width: max-content;
+  inline-size: auto;
 
   .spectrum-Dropdown--quiet {
     inline-size: auto;
     min-inline-size: var(--spectrum-dropdown-quiet-min-width);
 
     .spectrum-Dropdown-trigger {
-      inline-size: 100%;
-      max-width: max-content;
+      inline-size: auto;
     }
   }
 
